2006-06-14  Roger Leigh  <rleigh@debian.org>

	* Update translations.

2006-06-14  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Split dchroot into a separate package.

2006-06-14  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Output configuration file with a help
	message in comments, to help migrating dchroot.conf.

2006-06-13  Roger Leigh  <rleigh@debian.org>

	* schroot/Makefile.am
	(install-data-hook): Don't create $(SCHROOT_LOCK_DIR).

	* configure.ac: Remove SCHROOT_LOCK_DIR, which is no longer used
	now we use lockdev and fcntl locking.

2006-06-13  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #372874.

	* NEWS: Document dchroot.conf change.

	* schroot/dchroot.1.in: Document the new personality field in
	dchroot.conf.

	* schroot/dchroot-chroot-config.cc (parse_data): Parse a third
	optional "personality" field, and if present, set the chroot
	personality.

2006-06-13  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #372569.

	* NEWS: Document changed authorisation behaviour.

	* schroot/sbuild-session.cc
	(get_auth_status): If no groups are specified, root can still gain
	access (but still requires authentication).

2006-06-13  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #354344.

	* schroot/setup/10mount: Mount plain chroots with --rbind rather
	than --bind.  This is safe now schroot-listmounts is used to
	unmount all filesystems in the chroot.

2006-06-13  Roger Leigh  <rleigh@debian.org>

	* THANKS: New file.  Add Ben Hutchings.

2006-06-13  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document new "personality" option.

	* po/POTFILES.in: Add schroot/sbuild-personality.(cc|h).

	* test/Makefile.am: Add sbuild-personality.cc.

	* test/sbuild-personality.cc: Tests for sbuild::personality.

	* schroot/schroot.conf.5.in: Document new "personality" key.

	* schroot/Makefile.am: Add sbuild-personality.(cc|h).

	* schroot/sbuild.h: Include sbuild-personality.h.
